istio-system/routing-rules/meal-calender/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: meal-calender-com
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.meal-calender.com'
    port:
      name: http
      number: 80
      protocol: HTTP
